--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="/icons/site.webmanifest">
     <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#0a1e24">
     <meta name="msapplication-TileColor" content="#000000">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#fff">
     <link rel="icon" type="image/png" href="/favicon.ico" />
   </head>
   <body>
